--- a/style.css/style.css
+++ b/style.css/style.css
@@ -10,3 +10,14 @@
   height: 200px;
   margin-left: 30px;
 }
+#validation-input {
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
+}
